# MIPT_ALGO

./: CMakeLists.txt  main.cpp
IMPLEMENTATIONS/: Fourier.cpp  FourierRecursive.cpp  HashTable.cpp  Matrix.cpp  MergeSort.cpp  PrefixFunction.cpp  QuickSort.cpp  SegmentTree.cpp  StableCountSort.cpp  SuffixArray.cpp
IMPLEMENTATIONS/Stack/: Stack.h
IMPLEMENTATIONS/Stack/Node/: Node.cpp  Node.h
contest_1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp
contest_10/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  I.cpp  Trie.cpp
contest_11/: A.cpp  B.cpp  D.cpp  E.cpp  I.cpp
contest_12/: A.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  С.cpp
contest_13/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp
contest_2/: A.cpp  B.cpp  D.cpp  G.cpp  H.cpp  I.cpp  J.cpp
contest_3/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  H.cpp  SearchTree.cpp
contest_4/: A.cpp  B.cpp  C.cpp  D.cpp
contest_5/: A.cpp  D.cpp  F.cpp  Treap.cpp
contest_6/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp  R.cpp  S.cpp  T.cpp
contest_7/: A.cpp  B.cpp  C.cpp  D.cpp  Dfs.cpp  E.cpp  G.cpp
contest_8/: A.cpp  B.cpp  C.cpp  E.cpp  G.cpp  Graph.h  I.cpp  J.cpp
contest_9/: A.cpp  B.cpp  C.cpp  D.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  Q.cpp  R.cpp
